--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,14 +19,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Idea's are awesome</a>
+      <a class="navbar-brand" href="/">Ideas are awesome</a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li class="active"><a href="/ideas">Ideas</a></li>
       <li class="active"><a href="/pages/info">Info</a></li>
       <li class="active"><a href="/pages/about">About</a></li>
-      <li class="active"><a href="/pages/info">Ruby</a></li>
+      <li class="active"><a href="/pages/ruby">Ruby</a></li>
       </ul>
     </div>
   </div>
