--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,10 +23,10 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="/ideas">Ideas</a></li>
-      <li><a href="/pages/info">Info</a></li>
-      <li><a href="/pages/about">About</a></li>
-      <li><a href="/pages/ruby">Ruby</a></li>
+        <li class="<%="active" if @active_tab == "ideas" %>"><a href="/ideas">Ideas</a></li>
+      <li class="<%="active" if @active_tab == "info" %>"><a href="/pages/info">Info</a></li>
+      <li class="<%="active" if @active_tab == "about" %>"><a href="/pages/about">About</a></li>
+      <li class="<%="active" if @active_tab == "ruby" %>"><a href="/pages/ruby">Ruby</a></li>
       </ul>
     </div>
   </div>
